<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_avst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_avst" />

    <Button
        android:id="@+id/btn_pol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_pol" />

    <Button
        android:id="@+id/btn_it"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_it" />

    <Button
        android:id="@+id/btn_colum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_colum" />

    <Button
        android:id="@+id/btn_madaga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_madaga" />

    <Button
        android:id="@+id/btn_tai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_tai" />

    <Button
        android:id="@+id/btn_dan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_dan" />

    <Button
        android:id="@+id/btn_shveitc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_shveitc" />


</LinearLayout>